--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ requires-python = ">=3.12"
 dependencies = [
     "django == 5.2.4",
     "djangorestframework == 3.16.0",
-    "dotenv (>=0.9.9,<0.10.0)",
+    "dotenv == 0.9.9",
     "requests == 2.32.4",
     "psycopg2-binary == 2.9.10",
-    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
-    "drf-yasg (>=1.21.10,<2.0.0)",
+    "djangorestframework-simplejwt == 5.5.1",
+    "drf-yasg == 1.21.10",
 ]
 
 [tool.poetry]
