--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "django == 5.2.4",
     "dotenv == 0.9.9",
     "psycopg2-binary == 2.9.10",
+    "Pillow == 12.0.0",
 ]
 
 [tool.poetry]
