Remove unused HTML files for login, profile, register, and table pages; add empty __init__.py file to project directory.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -40,7 +40,7 @@ jobs:
           poetry install --only main
 
       - name: Run migrations
-        run: python manage.py migrate --settings=config.settings.prod
+        run: python manage.py migrate --settings=core.settings.prod
 
       - name: Run tests
         run: poetry run pytest --disable-warnings
