--- a/DockerFile
+++ b/DockerFile
@@ -18,4 +18,5 @@ RUN pip install poetry==2.1.3
 RUN poetry config virtualenvs.create false && poetry install --only main
 
 # Django runserver command
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000", "--settings=config.settings.prod"]
+
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "core.wsgi:application", "--timeout", "120"]
