--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "dotenv == 0.9.9",
     "psycopg2-binary == 2.9.10",
     "Pillow == 12.0.0",
+    "gunicorn == 21.2.0"
 ]
 
 [tool.poetry]
