--- a/DockerFile
+++ b/DockerFile
@@ -15,8 +15,11 @@ COPY . .
 RUN pip install poetry==2.1.3
 
 # Install dependencies using Poetry
-RUN poetry config virtualenvs.create false && poetry install --only main
+RUN poetry config virtualenvs.create false && poetry install --only main --no-root
 
-# Django runserver command
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "core.wsgi:application", "--timeout", "120"]
+
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["python", "manage.py", "runserver_plus", "0.0.0.0:8000", "--cert-file", "cert.crt", "--settings=core.settings.prod"]
