--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "dotenv == 0.9.9",
     "psycopg2-binary == 2.9.10",
     "Pillow == 12.0.0",
-    "gunicorn == 21.2.0"
+    "django-extensions",
+    "Werkzeug == 3.1.3",
+    "pyOpenSSL",
+    "whitenoise"
 ]
 
 [tool.poetry]
