--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,10 @@ dependencies = [
     "django-extensions",
     "Werkzeug == 3.1.3",
     "pyOpenSSL",
-    "whitenoise"
+    "whitenoise",
+    "djangorestframework == 3.16.0",
+    "djangorestframework-simplejwt == 5.5.1",
+    "drf-yasg == 1.21.10",
 ]
 
 [tool.poetry]
